Table head added

--- a/Repo1.html
+++ b/Repo1.html
@@ -4,6 +4,14 @@
     <title>Table</title>
 </head>
 <body>
-    
+    <table border="1">
+        <b>My Daily Routine</b> <br><br>
+        <thead>
+            <tr>
+                <th>Sr. No.</th>
+                <th>Time</td>
+                <th>Activities</td>
+            </tr>
+        </thead>
 </body>
 </html>
