table content added

--- a/Repo1.html
+++ b/Repo1.html
@@ -13,5 +13,41 @@
                 <th>Activities</td>
             </tr>
         </thead>
+
+        <tr>
+            <td>1</td>
+            <td rowspan="3">07:00AM-08:30AM</td>
+            <td>Wake up</td>
+         </tr>
+         <tr>
+             <td>2</td>
+             <td>Shower</td>
+         </tr>
+         <tr>
+             <td>3</td>
+             <td>Breakfast</td>
+         </tr>
+         
+         <tr>
+             <td>4</td>
+             <td>08:45AM</td>
+             <td>Go to college</td>
+         </tr>
+         <tr>
+             <td>5</td>
+             <td>08:45AM-3:45PM</td>
+             <td>Attend Lectures</td>
+         </tr>
+         <tr>
+             <td>6</td>
+             <td>04:00PM</td>
+             <td>Back to Hostel & sleep</td>
+         </tr>
+         <tr>
+             <td>7</td>
+             <td>06:00PM</td>
+             <td>Wake up and solve coding challenge on leetcode</td>
+         </tr>
+         <tr>
 </body>
 </html>
