--- a/Repo1.html
+++ b/Repo1.html
@@ -13,7 +13,7 @@
                 <th>Activities</td>
             </tr>
         </thead>
-
+        <tbody>
         <tr>
             <td>1</td>
             <td rowspan="3">07:00AM-08:30AM</td>
@@ -49,5 +49,24 @@
              <td>Wake up and solve coding challenge on leetcode</td>
          </tr>
          <tr>
+            <td>8</td>
+                <td>07:00PM-08:15PM</td>
+                <td>Attend web development class</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>08:30PM-09:30PM</td>
+                <td>Dinner</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td rowspan="2">10:00pm-12:00pm</td>
+                <td>Use Mobile</td>
+            </tr>
+            <tr>
+                <td>11</td>
+                <td>Bed Time</td>
+            </tr>
+        </tbody>
 </body>
 </html>
