--- a/Repo2.html
+++ b/Repo2.html
@@ -5,5 +5,13 @@
 </head>
 <body>
     <h1>Hotel Booking</h1>
+    <b><p>Experiance something new every moment</p></b><br><hr><br>
+    <label for="name"><b>Name: </b></label><br>
+    <input type="text" id="name" required> &nbsp;&nbsp;
+    <input type="text" id="name" required> 
+    <br> First Name &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Last Name
+    <br><br>
+    <label for="mail"><b>Email: </b></label><br>
+    <input type="email" id="mail" required><br><br>
 </body>
 </html>
