--- a/Repo2.html
+++ b/Repo2.html
@@ -13,5 +13,24 @@
     <br><br>
     <label for="mail"><b>Email: </b></label><br>
     <input type="email" id="mail" required><br><br>
+    <label for="label"><b>Room Type: </b></label><br>
+    <select id="room" required>
+        <option>Please Select</option>
+        <option>Standard Room (1 to 2 people)</option>
+        <option>Family Room (1 to 4 people)</option>
+        <option>Private Room (1 to 3 people)</option>
+        <option>Mix Dorm Room (6 people)</option>
+        <option>Female Dorm Room (6 people)</option>
+        <option>Male Dorm Room (6 people)</option>
+    </select><br><br>
+    <label for="guest"><b>Number of Guests: </b></label><br>
+    <input type="number" id="guest" required><br><br>
+    <label for="dt"><b>Arrival Date & Time: </b></label><br>
+    <input type="date" id="dt" required><br>Date <br><br>
+    <input type="time" id="dt" required><br>Hour:Minutes <br><br>
+    <select id="t1" required>
+        <option>AM</option>
+        <option>PM</option>
+    </select><br><br>
 </body>
 </html>
