--- a/Repo2.html
+++ b/Repo2.html
@@ -32,5 +32,49 @@
         <option>AM</option>
         <option>PM</option>
     </select><br><br>
+    <label for="date"><b>Deparature Date: </b></label><br>
+    <select id="month" required>
+        <option>Please Select Month</option>
+        <option>January</option>
+        <option>February</option>
+        <option>March</option>
+        <option>April</option>
+        <option>May</option>
+        <option>June</option>
+        <option>July</option>
+        <option>August</option>
+        <option>September</option>
+        <option>October</option>
+        <option>November</option>
+        <option>December</option>
+    </select>
+
+    <select id="day" required>
+        <option>Please Select Day</option>
+        <option>Monday</option>
+        <option>Tuesday</option>
+        <option>Wednesday</option>
+        <option>Thursday</option>
+        <option>Friday</option>
+        <option>Saturday</option>
+        <option>Sunday</option>
+    </select>
+
+    <select id="Year" required>
+        <option>Please Select Year</option>
+        <option>2024</option>
+    </select><br><br>
+
+    <p><b>Free Pickup?</b></p>
+    <input type="radio" name="pickup" id="yes">
+    <label for="yes">Yes Please! - Pick me up on arrival!</label><br>
+
+    <input type="radio" name="pickup" id="no">
+    <label for="no">No thanks! - I'll make my own way there!</label><br><br>
+    
+    <label for="req">Special Requests</label>
+    <input type="text" id="req"><br><br>
+
+    <input type="submit" value="Submit">
 </body>
 </html>
